--- a/consoleDesign/app/src/main/res/layout/activity_main.xml
+++ b/consoleDesign/app/src/main/res/layout/activity_main.xml
@@ -88,4 +88,13 @@
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="33dp" />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="297dp"
+        tools:layout_editor_absoluteY="114dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
