--- a/consoleDesign/app/src/main/res/layout/activity_main.xml
+++ b/consoleDesign/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,10 @@
         android:id="@+id/buttonRight"
         android:layout_width="68dp"
         android:layout_height="58dp"
-        android:layout_marginTop="288dp"
         android:background="#9EFF0000"
         android:text="->"
         android:textSize="30"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonLeft"
         tools:layout_editor_absoluteX="159dp" />
 
     <Button
@@ -87,14 +86,5 @@
         app:srcCompat="@android:drawable/stat_sys_data_bluetooth"
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="33dp" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        tools:layout_editor_absoluteX="297dp"
-        tools:layout_editor_absoluteY="114dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
