--- a/consoleDesign/app/src/main/res/layout-h600dp-land/activity_main.xml
+++ b/consoleDesign/app/src/main/res/layout-h600dp-land/activity_main.xml
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.746" />
 
     <Button
-        android:id="@+id/btnUp"
+        android:id="@+id/btnForward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
