--- a/consoleDesign/app/src/main/res/layout/activity_main.xml
+++ b/consoleDesign/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="@string/left"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnRight"
         app:layout_constraintEnd_toStartOf="@+id/btnRight"
         app:layout_constraintHorizontal_bias="0.961"
@@ -29,7 +29,7 @@
         android:layout_marginStart="152dp"
         android:layout_marginLeft="152dp"
         android:text="@string/right"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="@string/up"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btnSlow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -57,7 +57,7 @@
         android:layout_marginRight="36dp"
         android:layout_marginBottom="116dp"
         android:text="@string/slow"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
